--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         
     -->
     <div id="bored" class="step slide" data-x="-1000" data-y="-1500" data-autoplay="10">
-        <q>Aren’t you just <b>bored</b> with all those slides-based presentations?</q>
+        <q>Want to <b>spruce up</b> your slide-based presentations?</q>
     </div>
 
     <!--
